Fix heatmap title on mobile

--- a/apps/dash-opioid-epidemic/assets/opioid.css
+++ b/apps/dash-opioid-epidemic/assets/opioid.css
@@ -670,7 +670,6 @@ hr {
 #heatmap-title {
     margin: 0;
     padding: 1rem;
-    height: 3rem;
 }
 
 #county-choropleth {
